Fixed the wrapping of sneakers, the view in which they appear on home.jsx page

--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -4,6 +4,7 @@
   padding: 25px;
   // font-size: 14px;
   margin-bottom: 40px;
+  margin-left: 40px;
   transition: all 0.2s ease-in-out;
 
   &:hover {
