--- a/src/index.scss
+++ b/src/index.scss
@@ -79,7 +79,7 @@ header {
 .sneakers {
   display: flex;
   margin-top: 30px;
-  justify-content: space-between;
+  // justify-content: space-between;
   flex-wrap: wrap;
 }
 
